Safari figure overflow fix.

--- a/app/oscitk/themes/Red/styles/_figures.scss
+++ b/app/oscitk/themes/Red/styles/_figures.scss
@@ -28,8 +28,6 @@
 			height: calc(100% + 30px); 
 			width: 100%;
 
-			height: 0px;
-
 			float: right;
 
 			position: relative;
@@ -53,7 +51,7 @@
 		    line-height: 29px;
 
 		    // All heights on these elements are overriden by JavaScript
-			height: 0px;
+			//height: 0px;
 
 
 		}
