--- a/app/oscitk/themes/Red/styles/css/main.css
+++ b/app/oscitk/themes/Red/styles/css/main.css
@@ -9551,12 +9551,11 @@ input[type=range]:focus::-ms-fill-upper {
   background-color: white;
   height: calc(100% + 30px);
   width: 100%;
-  height: 0px;
   float: right;
   position: relative;
   z-index: 3;
 }
-/* line 42, ../_figures.scss */
+/* line 40, ../_figures.scss */
 #section #default-section-view figure,
 #section #default-section-view figure .figure_content,
 #section #default-section-view figure .figure_content object,
@@ -9570,21 +9569,20 @@ input[type=range]:focus::-ms-fill-upper {
   display: block;
   max-width: 100%;
   line-height: 29px;
-  height: 0px;
 }
-/* line 61, ../_figures.scss */
+/* line 59, ../_figures.scss */
 #section #default-section-view figure {
   margin: auto;
   border: thin #eeeeee solid;
   border-radius: 5px;
   padding: 6px;
 }
-/* line 75, ../_figures.scss */
+/* line 73, ../_figures.scss */
 #section #default-section-view figure .figure_content object img {
   margin: 0 auto;
   border: 0;
 }
-/* line 82, ../_figures.scss */
+/* line 80, ../_figures.scss */
 #section #default-section-view figure .figure_content .layered_image-asset, #section #default-section-view figure .figure_content .layered_image-asset svg {
   -webkit-column-break-inside: avoid;
   /* Chrome, Safari */
@@ -9593,11 +9591,11 @@ input[type=range]:focus::-ms-fill-upper {
   break-inside: avoid-column;
   /* IE 11 */
 }
-/* line 89, ../_figures.scss */
+/* line 87, ../_figures.scss */
 #section #default-section-view figure figcaption {
   background: white;
 }
-/* line 94, ../_figures.scss */
+/* line 92, ../_figures.scss */
 #section #default-section-view figure figcaption p {
   font-family: 'Lora', serif;
   font-style: italic;
